Exercicios HTML E CSS
Cruz

--- a/Exercicio 1/exercio1.html
+++ b/Exercicio 1/exercio1.html
@@ -33,11 +33,21 @@
     <div class="img1">
         <img src="ballet.jpg" alt="ballet">
     </div>
-    <p>técnica e a busca pela perfeição como base conceitual; postura ereta do dançarino (trabalho do corpo na posição vertical-alongada); o uso da música clássica; e movimentos executados com o pé na posição em dehors (o giro dos pés e pernas para fora).</p>
+    <p>Técnica e a busca pela perfeição como base conceitual; postura ereta do dançarino (trabalho do corpo na posição vertical-alongada); o uso da música clássica; e movimentos executados com o pé na posição em dehors (o giro dos pés e pernas para fora).</p>
 
 <div class="img2">
     <img src="dança-contemporanea.jpg" alt="dança contemporanea">
 </div>
 <p>Sua técnica é tão abrangente que não delimita estilos de roupas, músicas, espaços ou movimentos.</p>
+
+<div class="img3">
+    <img src="valsa.jpg" alt="valsa">
+</div>
+<p>É caracterizada pelo ritmo lento e pelo movimento de torções em par, que se movem pelo salão em círculos, como se estivessem dando voltas.</p>
+
+<div class="img4">
+    <img src="sapateado.jpg" alt="sapateado">
+</div>
+<p>O sapateado é um estilo no qual os dançarinos utilizam sapatos especiais para combinar passos e sons únicos, estimulando a criatividade e o ritmo.</p>
 </body>
 </html>
